Add momentjs, make check boxres look better

--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -3,3 +3,42 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+input[type="checkbox"]{
+  -webkit-appearance: initial;
+  appearance: initial;
+  background: gray;
+  width: 40px;
+  height: 40px;
+  border: none;
+  background: gray;
+  position: relative;
+  margin-bottom: 10px;
+}
+input[type="checkbox"]:checked {
+  background: green;
+}
+input[type="checkbox"]:checked:after {
+  /* Heres your symbol replacement - this is a tick in Unicode. */
+  content: "\2713";
+  color: #fff;
+  /* The following positions my tick in the center, 
+   * but you could just overlay the entire box
+   * with a full after element with a background if you want to */
+  /* position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%,-50%);
+  -moz-transform: translate(-50%,-50%);
+  -ms-transform: translate(-50%,-50%);
+  transform: translate(-50%,-50%); */
+  
+   /* If you want to fully change the check appearance, use the following: */
+   content: " ";
+   width: 100%;
+   height: 100%;
+   background: blue;
+   top: 0;
+   left: 0;
+  
+}
