--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -2,6 +2,8 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background-color: #323b44;
+  color: #98a6ad;
 }
 
 input[type="checkbox"]{
@@ -47,4 +49,32 @@ input[type="checkbox"]:checked:after {
 .target_num{
   position: relative;
   bottom: 20px;
+}
+
+.card-box{
+  padding: 20px;
+  border: 1px solid 1px solid rgba(54, 64, 74, 0.08);
+  border-radius: 5px;
+  background-color: #36404a;
+  margin-bottom: 20px;
+}
+
+.header-title{
+  text-transform: uppercase;
+  font-size: 1rem;
+  font-weight: 700;
+}
+
+.header-title-big{
+  text-transform: uppercase;
+  font-size: 1.2rem;
+  font-weight: 700;
+}
+
+#login{
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
