--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -17,6 +17,12 @@ input[type="checkbox"] {
   margin-bottom: 10px;
   margin-right: 5px;
 }
+
+.big-box {
+  width: 50px !important;
+  height: 50px !important;
+}
+
 input[type="checkbox"]:checked {
   background: green;
   margin-right: 0;
@@ -82,6 +88,6 @@ input[type="checkbox"]:checked:after {
   padding-left: 0;
 }
 
-input[data-type-index]:nth-child(5n) {
+input:nth-child(5n) {
   margin-right: 20px;
 }
