--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -91,3 +91,8 @@ input[type="checkbox"]:checked:after {
 input:nth-child(5n) {
   margin-right: 20px;
 }
+
+/* .badge-primary{
+  background: rgb(59, 175, 218);
+  font-weight: 600;
+} */
