--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -3,7 +3,7 @@ body {
   padding: 0;
   font-family: sans-serif;
   background-color: #323b44;
-  color: #98a6ad;
+  color: #fff;
 }
 
 input[type="checkbox"] {
@@ -16,6 +16,10 @@ input[type="checkbox"] {
   position: relative;
   margin-bottom: 10px;
   margin-right: 5px;
+}
+
+.navbar-inverse .navbar-nav .nav-link{
+  color: #fff;
 }
 
 .big-box {
@@ -66,11 +70,26 @@ input[type="checkbox"]:checked:after {
 }
 
 #login {
-  height: 500px;
+  height: 75vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+#login .card-box{
+  -webkit-box-shadow: -10px 10px 5px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: -10px 10px 5px 0px rgba(0,0,0,0.75);
+  box-shadow: -10px 10px 5px 0px rgba(0,0,0,0.75);
+}
+
+.demo-link{
+  color: #fff;
+  text-decoration: underline;
+}
+
+.demo-link:hover{
+  color: rgba(255,255,255,.75);
 }
 
 .fail {
