DRY up code and deploy to heroku

--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -115,3 +115,9 @@ input:nth-child(5n) {
 input:last-child{
   margin-right: 0;
 }
+
+
+.challenge-badge{
+  border-radius: 0;
+  font-size: 1em;
+}
