Improve Mobile look of AddHabit Component

--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -129,4 +129,8 @@ input[type="checkbox"]:checked:after {
   .habit-padding{
     padding: 0 15px 0 15px;
   }
+
+  .habit-suggestions{
+    order: -1;
+  }
 }
