--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -74,11 +74,7 @@ input[type="checkbox"]:checked:after {
 }
 
 #login {
-  height: 75vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  margin-top: 20vh;
 }
 
 #login .card-box{
