--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -1,14 +1,27 @@
+:root {
+  --primary-color: #008000;
+  --font-color: #fff;
+}
+
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
   background-color: #323b44;
-  color: #fff;
+  color: var(--font-color);
+}
+
+.navbar-bg-color {
+  background-color: var(--primary-color)
 }
 
 .btn-success {
-  background-color: #008000;
-  border-color: #008000;
+  background-color: var(--primary-color);
+  border-color: var(--primary-color);
+}
+
+.btn-success:hover {
+  background-color: #028d02
 }
 
 input[type="checkbox"] {
@@ -24,7 +37,7 @@ input[type="checkbox"] {
 }
 
 .navbar-inverse .navbar-nav .nav-link{
-  color: #fff;
+  color: var(--font-color);
 }
 
 input[type="checkbox"].big-box {
@@ -35,7 +48,7 @@ input[type="checkbox"].big-box {
 }
 
 input[type="checkbox"]:checked {
-  background: green;
+  background: var(--primary-color);
   /* margin-right: 0; */
 }
 
@@ -54,7 +67,7 @@ input[type="checkbox"]:checked {
 } */
 
 input[type="checkbox"]:checked:after {
-  color: #fff;
+  color: var(--font-color);
   content: "";
   width: 100%;
   height: 100%;
@@ -92,12 +105,12 @@ input[type="checkbox"]:checked:after {
   box-shadow: -10px 10px 5px 0px rgba(0,0,0,0.75);
 }
 
-.demo-link{
-  color: #fff;
+.demo-link {
+  color: var(--font-color);
   text-decoration: underline;
 }
 
-.demo-link:hover{
+.demo-link:hover {
   color: rgba(255,255,255,.75);
 }
 
@@ -111,12 +124,12 @@ input[type="checkbox"]:checked:after {
   text-transform: uppercase;
 }
 
-.challenge-badge{
+.challenge-badge {
   border-radius: 0;
   font-size: 1em;
 }
 
-.habit-padding{
+.habit-padding {
   padding: 0;
 }
 
