--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -1,8 +1,18 @@
 :root {
   --primary-color: #008000;
   --font-color: #fff;
+  --font-family-sans-serif: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+  --font-family-monospace: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
 }
 
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: #97a6ad;
+  opacity: 1; /* Firefox */
+}
+
+html {
+  font-family: 'Montserrat', sans-serif !important;
+}
 body {
   margin: 0;
   padding: 0;
@@ -12,8 +22,19 @@ body {
 }
 
 .navbar-bg-color {
-  background-color: var(--primary-color)
+  background-color: var(--primary-color);
 }
+
+.bright-theme {
+  background-color: #ebebeb;
+  color: #8ad1f0;
+  font-weight: 400;
+}
+
+.bright-theme .navbar-bg-color {
+  background-color: #122f3b; 
+}
+
 
 .btn-success {
   background-color: var(--primary-color);
@@ -36,6 +57,9 @@ input[type="checkbox"] {
   margin-right: 5px;
 }
 
+.bright-theme input[type="checkbox"]:checked {
+  background: #0ad250
+}
 .navbar-inverse .navbar-nav .nav-link{
   color: var(--font-color);
 }
@@ -51,20 +75,6 @@ input[type="checkbox"]:checked {
   background: var(--primary-color);
   /* margin-right: 0; */
 }
-
-/* input[type="checkbox"]:checked +  input[type="checkbox"]:not(:checked){
-  margin-left: 5px;
-} */
-
-/* input:nth-child(5n) {
-  margin-right: 20px;
-} */
-
-/* @media (max-width: 768px){
-  input:nth-child(5n){
-    margin-right: 5px;
-  }
-} */
 
 .disabledControls {
   pointer-events: none;
@@ -86,6 +96,19 @@ input[type="checkbox"]:checked:after {
   border-radius: 5px;
   background-color: #36404a;
   margin-bottom: 20px;
+  box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
+}
+
+.bright-theme .card-box {
+  background-color: #ffffff;
+}
+
+.nav-item a {
+  color: white;
+}
+
+.nav-item .nav-link.active, .nav-link:hover {
+  background: linear-gradient(135deg, #07a7e3 0%, #32dac3 100%);
 }
 
 .header-title, .header-title-big{
@@ -132,6 +155,11 @@ input[type="checkbox"]:checked:after {
 .challenge-badge {
   border-radius: 0;
   font-size: 1em;
+ 
+}
+
+.bright-theme .challenge-badge {
+  background-color: #09a7e4;
 }
 
 .habit-padding {
