--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -1,17 +1,20 @@
 :root {
   --primary-color: #008000;
   --font-color: #fff;
+  --dark-font-color: #000;
   --font-family-sans-serif: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
   --font-family-monospace: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
 }
 
-::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+::placeholder {
   color: #97a6ad;
-  opacity: 1; /* Firefox */
+  opacity: 1;
 }
 
 html {
   font-family: 'Montserrat', sans-serif !important;
+  font-size: 12px;
+  font-weight: 400;
 }
 body {
   margin: 0;
@@ -21,20 +24,26 @@ body {
   color: var(--font-color);
 }
 
+.text-dark {
+  color: var(--dark-font-color);
+}
+
+.navbar {
+  box-shadow: 0 2px 23px 0 rgba(0, 0, 0, 0.1), 0 2px 49px 0 rgba(0, 0, 0, 0.06);
+}
+.navbar-lg {
+  padding: 1.5rem 3rem;
+}
+
+.custom-button {
+  position: absolute;
+  z-index: 1000;
+  padding: 0.5em;
+}
+
 .navbar-bg-color {
   background-color: var(--primary-color);
 }
-
-.bright-theme {
-  background-color: #ebebeb;
-  color: #8ad1f0;
-  font-weight: 400;
-}
-
-.bright-theme .navbar-bg-color {
-  background-color: #122f3b; 
-}
-
 
 .btn-success {
   background-color: var(--primary-color);
@@ -57,9 +66,6 @@ input[type="checkbox"] {
   margin-right: 5px;
 }
 
-.bright-theme input[type="checkbox"]:checked {
-  background: #0ad250
-}
 .navbar-inverse .navbar-nav .nav-link{
   color: var(--font-color);
 }
@@ -99,10 +105,9 @@ input[type="checkbox"]:checked:after {
   box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
 }
 
-.bright-theme .card-box {
-  background-color: #ffffff;
+.nav-link {
+  padding: 1rem 2rem;
 }
-
 .nav-item a {
   color: white;
 }
@@ -156,10 +161,6 @@ input[type="checkbox"]:checked:after {
   border-radius: 0;
   font-size: 1em;
  
-}
-
-.bright-theme .challenge-badge {
-  background-color: #09a7e4;
 }
 
 .habit-padding {
