Give habit input boxes a better shade of gray to match theme

--- a/front-end/src/BrightTheme.css
+++ b/front-end/src/BrightTheme.css
@@ -21,6 +21,9 @@
     color: white;
 }
 
+.bright-theme input[type="checkbox"] {
+    background: #dfdfdf
+}
 .bright-theme input[type="checkbox"]:checked {
     background: #0ad250
 }
