--- a/front-end/src/BrightTheme.css
+++ b/front-end/src/BrightTheme.css
@@ -1,6 +1,6 @@
 .bright-theme {
-    background-color: #ebebeb;
-    color: #72848c;
+    background-color: #ebebeb !important;
+    color: #72848c !important;
     font-weight: 400;
 }
 
